--- a/style.css
+++ b/style.css
@@ -148,3 +148,16 @@ body, html {
   width:100%;
   height:65px;
 	}
+
+.info_box {
+	background:#191970;
+	padding:50px;
+	font-size:20px;
+	color:#F0F8FF;
+	margin: 0;
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -90%);
+    transform: translate(-50%, -90%);
+}
