--- a/style.css
+++ b/style.css
@@ -58,68 +58,34 @@ body, html {
 /* Position text in the middle of the page/image */
 .bg-text {
   background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, .2); /* Black w/opacity/see-through */
+  background-color: rgba(0, 10, 10, .4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
-  border: 3px solid #A52A2A;
+  border: 3px solid #708090;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 80%;
-  padding: 20px;
+  padding: 40px;
   text-align: center;
+  border-radius: 10px;
   }
 
-.card_wide {
-  background-image:linear-gradient(#696969, #808080);
-  color: #f9f9f9;
-  font-weight: bold;
-  position: absolute;
-  top: 170%;
-  left: 50%;
-  transform: translate(-50%, -100%);
-  z-index: 2;
-  width: 25%;
-  transition: width 2s;
-  height: 20%;
-  padding: 30px;
-  text-align: center;
-	}
   
   /* background-image:linear-gradient(#5F9EA0, #6495ED, #008B8B, #D2691E, #FFA500); */
 .block {
   padding: 20px;
-  background-image:linear-gradient(#5F9EA0, #6495ED);
+  background: #2F4F4F;
   color:#f9f9f9;
 	}
 #second {
-  background-image:linear-gradient(#008B8B, #D2691E);
+  background: #708090;
 	}
 
 #footer {
-  background-image:linear-gradient(#D2691E, #FFA500);
-	}
-
-.discord {
-  background:#191970;
-  text-decoration: none;
-  font-size:25px;
-  color:white;
-  transition: background .5s, padding .1s;
-  padding:15px;
-  text-align: center;
-	}
-
-.discord:hover {
-  background:#556B2F;
-  padding:17px;
-	}
-
-.discord:active {
-  background: #228B22;
-  padding:20px;
+  background-image:linear-gradient(#708090, #2F4F4F);
 	}
 
 .button {
@@ -130,6 +96,7 @@ body, html {
   transition: background .5s, padding .1s;
   padding:15px;
   text-align: center;
+  border-radius: 5px;
 	}
 
 .button:hover {
@@ -143,7 +110,7 @@ body, html {
 	}
 
 .nav {
-  background:#E6E6FA;
+  background-image: linear-gradient(#224e4c, #2F4F4F);
   
   width:100%;
   height:65px;
@@ -160,4 +127,49 @@ body, html {
     left: 50%;
     -ms-transform: translate(-50%, -90%);
     transform: translate(-50%, -90%);
+	border-radius: 5px;
+}
+
+
+.custom-shape-divider-top-1629554372 {
+    position: absolute;
+    top: 100;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+}
+
+.custom-shape-divider-top-1629554372 svg {
+    position: relative;
+    display: block;
+    width: calc(127% + 1.3px);
+    height: 98px;
+}
+
+.custom-shape-divider-top-1629554372 .shape-fill {
+    fill: #2F4F4F;
+}
+
+
+
+.custom-shape-divider-top-1629555445 {
+    position: absolute;
+    top: 10;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-top-1629555445 svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 130px;
+}
+
+.custom-shape-divider-top-1629555445 .shape-fill {
+    fill: #708090;
 }
