--- a/staff_apply_form/templates/apply.html
+++ b/staff_apply_form/templates/apply.html
@@ -18,7 +18,8 @@ body, html {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background:#B0C4DE;
+  background:#708090;
+  color:#fff;
 }
 
 
@@ -30,6 +31,7 @@ body, html {
   transition: background .5s, padding .1s;
   padding:15px;
   text-align: center;
+  border-radius: 5px;
 	}
 
 .button:hover {
@@ -43,7 +45,7 @@ body, html {
 	}
 
 .nav {
-  background:#E6E6FA;
+  background:#2F4F4F;
   
   width:100%;
   height:65px;
@@ -52,6 +54,12 @@ body, html {
 .form {
 	padding: 25px;
 	}
+
+.textbox {
+	border-radius: 5px;
+	padding: 3px;
+	}
+
 </style>
 
   <title>OPmine3 -> Apply</title>
@@ -76,30 +84,30 @@ body, html {
 5. what can you do to help the server?
  6. Do you have experience as a staff member in another server?
 -->
+
 <div class="form">
 <form action="/form" method="POST">
     <label for="IGN">Whats your IGN name?</label>
-    <input type="input" id="IGN" name="ign"><br>
+    <input type="input" id="IGN" name="ign" class="textbox"><br>
 	
 	<label for="dis">Whats your discord name? <br>(i. e. username#0000)</label>
-    <input type="input" id="dis" name="dis"><br>
+    <input type="input" id="dis" name="dis" class="textbox"><br>
 	
 	Why do you want to be staff?<br>
-    <textarea id="why" name="why">I want to be staff because...</textarea><br>
+    <textarea id="why" name="why" class="textbox">I want to be staff because...</textarea><br>
 	
 	<label for="rank">What rank are you applying for?<br>(helper, mod, admin, builder)</label>
-    <input type="input" id="rank" name="rank"><br>
+    <input type="input" id="rank" name="rank" class="textbox"><br>
 	
 	What can you do to help the server?<br>
-    <textarea id="help" name="help">I can help by...</textarea><br>
+    <textarea id="help" name="help" class="textbox">I can help by...</textarea><br>
 	
 	Do you have experience as a staff member in another server?<br>
-    <textarea id="xp" name="xp">Yes, I am a...</textarea><br>
+    <textarea id="xp" name="xp" class="textbox">Yes, I am a...</textarea><br>
 
 	<br>
-	<button type="submit">Submit</button>
+	<button type="submit" class="button" style="font-size:17px; padding:10px;">Submit</button>
 </form>
 </div>
 </body>
 </html>
-
