--- a/staff_apply_form/templates/form.html
+++ b/staff_apply_form/templates/form.html
@@ -18,7 +18,8 @@ body, html {
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background:#B0C4DE;
+  background:#708090;
+  color:#fff;
 }
 
 
@@ -30,6 +31,7 @@ body, html {
   transition: background .5s, padding .1s;
   padding:15px;
   text-align: center;
+  border-radius: 5px;
 	}
 
 .button:hover {
@@ -43,11 +45,21 @@ body, html {
 	}
 
 .nav {
-  background:#E6E6FA;
+  background:#2F4F4F;
   
   width:100%;
   height:65px;
 	}
+
+.form {
+	padding: 25px;
+	}
+
+.textbox {
+	border-radius: 5px;
+	padding: 3px;
+	}
+
 </style>
 
   <title>OPmine3 -> Apply</title>
